Readequando as configurações, para utilizar o MYSQL local e não mais com docker

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,27 @@
-# Configuração JPA e Hibernate
-spring.jpa.hibernate.ddl-auto=update
-# Certifique-se de usar a porta correta (3307 no seu caso)
-spring.datasource.url=jdbc:mysql://localhost:3307/mydatabase
-# Username do banco de dados
-spring.datasource.username=myuser
-# Usando a variável de ambiente para a senha
+# Importa configurações adicionais de um arquivo externo chamado .env.properties de forma opcional
+spring.config.import=optional:file:.env[.properties]
+
+# Define a URL de conexão com o banco de dados MySQL. Aqui, "localhost" indica que o banco está rodando na máquina local,
+# "3306" é a porta padrão do MySQL, e "investimentos" é o nome do banco de dados.
+spring.datasource.url=jdbc:mysql://localhost:3306/investimentos
+
+# Define o nome de usuário para se conectar ao banco de dados, obtido de uma variável de ambiente chamada MYSQL_USER
+spring.datasource.username=${MYSQL_USER}
+
+# Define a senha para se conectar ao banco de dados, também obtida de uma variável de ambiente chamada MYSQL_PASSWORD
 spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Exibe as consultas SQL no console
+
+# Configura o Hibernate para atualizar automaticamente o esquema do banco de dados com base nas entidades Java.
+spring.jpa.hibernate.ddl-auto=update
+
+# Habilita a exibição das consultas SQL no console para facilitar o debug e acompanhamento
 spring.jpa.show-sql=true
-# Formata SQL para melhor legibilidade
+
+# Configura a formatação das consultas SQL no console, deixando-as mais legíveis
 spring.jpa.properties.hibernate.format_sql=true
-# Definir o dialeto do MySQL 8
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Define explicitamente o dialeto do MySQL 8 para otimizar a comunicação com o banco de dados
+logging.level.org.springframework.security=DEBUG
+
+# Define a porta em que o servidor Spring Boot será executado, neste caso, 8083
+server.port=8083
