--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,3 +25,7 @@ logging.level.org.springframework.security=DEBUG
 
 # Define a porta em que o servidor Spring Boot será executado, neste caso, 8083
 server.port=8083
+
+# Configurando documentação da api, utilizando o Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
