--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,3 +24,8 @@ logging.level.org.springframework.security=WARN
 
 # Define a porta em que o servidor Spring Boot será executado em produção, neste caso, 8080
 server.port=8080
+
+# Configurando documentação da api, utilizando o Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
