--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.18</version>
+			<version>1.18.36</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- Dependência do MapStruct -->
 		<dependency>
@@ -81,8 +82,9 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.1.0</version>
+			<version>2.3.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
