--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,5 +27,9 @@ logging.level.org.springframework.security=DEBUG
 server.port=8083
 
 # Configurando documentação da api, utilizando o Swagger
+#Disable Whitelabel Error Page
+server.error.whitelabel.enabled = false
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
