--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -26,6 +26,10 @@ logging.level.org.springframework.security=WARN
 server.port=8080
 
 # Configurando documentação da api, utilizando o Swagger
+#Disable Whitelabel Error Page
+server.error.whitelabel.enabled = false
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
