feat: Added openRouter for analysis

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -33,3 +33,7 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# Configurando o openRouter API Key
+openrouter.api.key=${OPENROUTER_TOKEN}
+
