--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -33,3 +33,6 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
+# Configurando o openRouter API Key
+openrouter.api.key=${OPENROUTER_TOKEN}
+
