--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=false
 logging.level.org.springframework.security=WARN
 
 # Define a porta em que o servidor Spring Boot será executado em produção, neste caso, 8080
-server.port=8080
+server.port=${PORT:8080}
 
 # Configurando documentação da api, utilizando o Swagger
 #Disable Whitelabel Error Page
