fix: Edited application.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Importa configurações adicionais de um arquivo externo chamado .env.properties de forma opcional
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:.env.properties
 
 # Define a URL de conexão com o banco de dados MySQL. Aqui, "localhost" indica que o banco está rodando na máquina local,
 # "3306" é a porta padrão do MySQL, e "investimentos" é o nome do banco de dados.
