fix: Edited application.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,14 +3,13 @@ spring.config.import=optional:file:.env.properties
 
 # Define a URL de conexão com o banco de dados MySQL. Aqui, "localhost" indica que o banco está rodando na máquina local,
 # "3306" é a porta padrão do MySQL, e "investimentos" é o nome do banco de dados.
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://root:XbGNqebhpeHxhxzxAciKzbuRAbXClHSm@tramway.proxy.rlwy.net:44546/railway
 
 # Define o nome de usuário para se conectar ao banco de dados, obtido de uma variável de ambiente chamada MYSQL_USER
-#spring.datasource.username=${MYSQL_USER}
-spring.datasource.username=root
+spring.datasource.username=${MYSQL_USER}
+
 # Define a senha para se conectar ao banco de dados, também obtida de uma variável de ambiente chamada MYSQL_PASSWORD
-#spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.password=GlzfzFwpMvSpezaRnMFGGuKGjvSQNZYp
+spring.datasource.password=${MYSQL_PASSWORD}
 
 # Configura o Hibernate para atualizar automaticamente o esquema do banco de dados com base nas entidades Java.
 spring.jpa.hibernate.ddl-auto=update
