--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.config.import=optional:file:.env.properties
 
 # Define a URL de conexão com o banco de dados MySQL. Aqui, "localhost" indica que o banco está rodando na máquina local,
 # "3306" é a porta padrão do MySQL, e "investimentos" é o nome do banco de dados.
-spring.datasource.url=jdbc:mysql://root:XbGNqebhpeHxhxzxAciKzbuRAbXClHSm@tramway.proxy.rlwy.net:44546/railway
+spring.datasource.url=${DATABASE_URL}
 
 # Define o nome de usuário para se conectar ao banco de dados, obtido de uma variável de ambiente chamada MYSQL_USER
 spring.datasource.username=${MYSQL_USER}
